--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ body {
   margin: 0 5px 10px 0;
   font-size: 0.9em;
   display: inline-block;
+  transform: scale(1, 1);
 }
 #random-choice-picker .tag.highlight {
   background-color: #273c75;
+  transform: scale(0.9, 0.9);
 }
